fix width on small devices

--- a/resources/sass/_media.sass
+++ b/resources/sass/_media.sass
@@ -75,10 +75,16 @@
   .md-2
     min-width: 100%
   .top-bar
+    width: calc(100% - 1rem)
+    margin-left: auto
+    margin-right: auto
     .right
       a
         span
           display: none
+  .content
+    padding-left: 0.5rem
+    padding-right: 0.5rem
 
 // ≥576px
 +media-breakpoint-down(xs)
